--- a/app/src/main/res/drawable/ic_loupe_24dp.xml
+++ b/app/src/main/res/drawable/ic_loupe_24dp.xml
@@ -20,7 +20,9 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#AAA"
-        android:fillType="evenOdd"
-        android:pathData="M16.712,5.17H7.945V3.385H20.63V14.98h-1.885V7.213c0,-1.128 -0.91,-2.042 -2.032,-2.042zM23,2.193C23,1.536 22.467,1 21.815,1H6.907c-0.025,0 -0.047,0.013 -0.074,0.015 -0.025,0 -0.048,-0.015 -0.074,-0.015 -0.652,0 -1.185,0.536 -1.185,1.192V5.17H3.033A2.037,2.037 0,0 0,1 7.213v13.744C1,22.085 1.91,23 3.033,23h13.679a2.038,2.038 0,0 0,2.032 -2.043v-3.592h3.07c0.653,0 1.186,-0.536 1.186,-1.192 0,-0.027 -0.013,-0.048 -0.014,-0.075 0,-0.025 0.014,-0.048 0.014,-0.074V2.192z" />
+        android:fillColor="?attr/toolbarIconColor"
+        android:pathData="M14.2074,14.2069L14.2074,14.2069A1,1 124.0993,0 1,15.6216 14.2069L18.45,17.0353A1,1 60.9454,0 1,18.45 18.4496L18.45,18.4496A1,1 60.9454,0 1,17.0358 18.4496L14.2074,15.6211A1,1 124.0993,0 1,14.2074 14.2069z" />
+    <path
+        android:fillColor="?attr/toolbarIconColor"
+        android:pathData="M14.1678,14.1673a4.5,4.5 0,1 0,-6.364 -6.364,4.5 4.5,0 0,0 6.364,6.364zM15.2285,15.228a6,6 115.8277,1 1,-8.4853 -8.4853,6 6,115.8277 0,1 8.4853,8.4853z" />
 </vector>
