--- a/app/src/main/res/layout/content_about_duck_duck_go.xml
+++ b/app/src/main/res/layout/content_about_duck_duck_go.xml
@@ -43,7 +43,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:contentDescription="@string/duckDuckGoLogoDescription"
-            android:src="@drawable/full_logo" />
+            android:src="@drawable/logo_full" />
 
         <TextView
             android:layout_width="match_parent"
