--- a/app/src/main/res/layout/include_find_in_page.xml
+++ b/app/src/main/res/layout/include_find_in_page.xml
@@ -20,7 +20,7 @@
     android:id="@+id/findInPageContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="?attr/colorPrimary"
     android:clickable="true"
     tools:ignore="KeyboardInaccessibleWidget"
     tools:layout_height="?attr/actionBarSize">
@@ -31,14 +31,14 @@
         android:layout_height="match_parent"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:background="@color/colorPrimary"
+        android:background="?attr/colorPrimary"
         android:fontFamily="sans-serif-medium"
         android:hint="@string/findInPageHint"
         android:imeOptions="flagNoExtractUi"
         android:inputType="text"
         android:selectAllOnFocus="true"
-        android:textColor="@color/white"
-        android:textColorHint="@color/paleBrownishGray"
+        android:textColor="?attr/omnibarTextColor"
+        android:textColorHint="?attr/omnibarHintColor"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/findInPageMatches"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        android:textColor="@color/white"
+        android:textColor="?attr/omnibarTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/findInPageControlButtons"
         app:layout_constraintStart_toEndOf="@id/findInPageInput"
@@ -78,7 +78,7 @@
             android:layout_marginStart="6dp"
             android:layout_marginEnd="6dp"
             android:contentDescription="@string/previousSearchTermDescription"
-            android:src="@drawable/ic_keyboard_arrow_up_white_24dp"
+            android:src="@drawable/ic_keyboard_arrow_up_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/nextSearchTermButton"
             app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +91,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="6dp"
             android:contentDescription="@string/nextSearchTermDescription"
-            android:src="@drawable/ic_keyboard_arrow_down_white_24dp"
+            android:src="@drawable/ic_keyboard_arrow_down_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/previousSearchTermButton"
             app:layout_constraintTop_toTopOf="parent"
@@ -103,7 +103,7 @@
             android:layout_height="match_parent"
             android:contentDescription="@string/closeFindInPageButtonDescription"
             android:padding="6dp"
-            android:src="@drawable/ic_close_white_24dp"
+            android:src="@drawable/ic_close_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/nextSearchTermButton"
