--- a/app/src/main/res/layout/item_autocomplete_no_suggestions.xml
+++ b/app/src/main/res/layout/item_autocomplete_no_suggestions.xml
@@ -26,7 +26,7 @@
         android:layout_height="match_parent"
         android:text="@string/no_suggestions"
         android:textAlignment="center"
-        android:textColor="@color/warmGray"
+        android:textColor="@color/grayishTwo"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
