--- a/app/src/main/res/drawable/ic_add_24dp.xml
+++ b/app/src/main/res/drawable/ic_add_24dp.xml
@@ -20,6 +20,6 @@
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
-        android:fillColor="#FFF"
-        android:pathData="M7.41,15.41L12,10.83l4.59,4.58L18,14l-6,-6 -6,6z" />
+        android:fillColor="?attr/toolbarIconColor"
+        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
 </vector>
