--- a/app/src/main/res/drawable/ic_close_24dp.xml
+++ b/app/src/main/res/drawable/ic_close_24dp.xml
@@ -14,13 +14,12 @@
   ~ limitations under the License.
   -->
 
-
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="16dp"
-    android:height="16dp"
-    android:viewportWidth="16.0"
-    android:viewportHeight="16.0">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0">
     <path
-        android:fillColor="#FFF"
-        android:pathData="M12.72,12.312A1.588,1.588 0,0 0,11.2 11.2h-0.8V8.8c0,-0.44 -0.36,-0.8 -0.8,-0.8H4.8V6.4h1.6c0.44,0 0.8,-0.36 0.8,-0.8V4h1.6c0.88,0 1.6,-0.72 1.6,-1.6v-0.328c2.343,0.952 4,3.248 4,5.928 0,1.664 -0.64,3.176 -1.68,4.312zM7.2,14.344A6.39,6.39 0,0 1,1.6 8c0,-0.496 0.064,-0.968 0.168,-1.432L5.6,10.4v0.8c0,0.88 0.72,1.6 1.6,1.6v1.544zM8,0C3.584,0 0,3.584 0,8s3.584,8 8,8c4.415,0 8,-3.584 8,-8s-3.585,-8 -8,-8z" />
+        android:fillColor="?toolbarIconColor"
+        android:pathData="M19,6.41L17.59,5 12,10.59 6.41,5 5,6.41 10.59,12 5,17.59 6.41,19 12,13.41 17.59,19 19,17.59 13.41,12z" />
 </vector>
