--- a/app/src/main/res/layout/activity_fire.xml
+++ b/app/src/main/res/layout/activity_fire.xml
@@ -20,7 +20,7 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/windowBackground"
+    android:background="?attr/colorPrimaryDark"
     tools:context="com.duckduckgo.app.fire.FireActivity">
 
     <com.airbnb.lottie.LottieAnimationView
