--- a/app/src/main/res/layout/content_tab_switcher.xml
+++ b/app/src/main/res/layout/content_tab_switcher.xml
@@ -58,7 +58,7 @@
                 android:layout_marginStart="6dp"
                 android:layout_marginEnd="6dp"
                 android:contentDescription="@string/tapFireIconDescription"
-                android:src="@drawable/ic_fire_gray_24dp"
+                android:src="@drawable/ic_fire_24dp"
                 android:tint="@color/white" />
 
             <TextView
