--- a/app/src/main/res/layout/content_tracker_networks.xml
+++ b/app/src/main/res/layout/content_tracker_networks.xml
@@ -74,7 +74,7 @@
                     android:gravity="center_horizontal"
                     android:letterSpacing="0.14"
                     android:textAllCaps="true"
-                    android:textColor="@color/warmGray"
+                    android:textColor="@color/grayishTwo"
                     android:textIsSelectable="false"
                     android:textSize="12sp"
                     android:textStyle="bold"
