--- a/app/src/main/res/layout/include_privacy_dashboard_header.xml
+++ b/app/src/main/res/layout/include_privacy_dashboard_header.xml
@@ -57,7 +57,7 @@
         android:gravity="center_horizontal"
         android:letterSpacing="0.14"
         android:text="@string/privacyProtectionEnabled"
-        android:textColor="@color/warmGray"
+        android:textColor="@color/grayishTwo"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
