--- a/app/src/main/res/menu/menu_browser_activity.xml
+++ b/app/src/main/res/menu/menu_browser_activity.xml
@@ -21,20 +21,19 @@
 
     <item
         android:id="@+id/fire"
-        android:icon="@drawable/ic_fire_gray_24dp"
+        android:icon="@drawable/ic_fire_24dp"
         android:title="@string/fireMenu"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/tabs"
-        android:icon="@drawable/ic_tabs_gray_24dp"
         android:title="@string/tabsMenuItem"
         app:actionViewClass="com.duckduckgo.app.browser.TabSwitcherButton"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/browserPopup"
-        android:icon="@drawable/ic_overflow_gray_24dp"
+        android:icon="@drawable/ic_overflow_24dp"
         android:title="@string/browserPopupMenu"
         app:showAsAction="always" />
 
