--- a/app/src/main/res/menu/menu_tab_switcher_activity.xml
+++ b/app/src/main/res/menu/menu_tab_switcher_activity.xml
@@ -21,13 +21,13 @@
 
     <item
         android:id="@+id/fire"
-        android:icon="@drawable/ic_fire_gray_24dp"
+        android:icon="@drawable/ic_fire_24dp"
         android:title="@string/fireMenu"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/newTab"
-        android:icon="@drawable/ic_add_gray_30dp"
+        android:icon="@drawable/ic_add_30dp"
         android:title="@string/newTabMenuItem"
         app:showAsAction="always" />
 
