--- a/app/src/main/res/values-v23/styles.xml
+++ b/app/src/main/res/values-v23/styles.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2018 DuckDuckGo
   ~
@@ -14,10 +15,14 @@
   ~ limitations under the License.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="?attr/omnibarEditingBackgroundColor" />
-    <stroke
-        android:width="1dp"
-        android:color="?attr/omnibarEditingBackgroundColor" />
-    <corners android:radius="20dp" />
-</shape>
+<resources>
+
+    <style name="AppTheme.Dark" parent="AppTheme.BaseDark">
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
+
+    <style name="AppTheme.Light" parent="AppTheme.BaseLight">
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
+
+</resources>
