--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,12 +14,12 @@
   ~ limitations under the License.
   -->
 
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
-    <path
-        android:fillColor="#AAA"
-        android:pathData="M12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,10c-1.1,0 -2,0.9 -2,2s0.9,2 2,2 2,-0.9 2,-2 -0.9,-2 -2,-2zM12,16c-1.1,0 -2,0.9 -2,2s0.9,2 2,2 2,-0.9 2,-2 -0.9,-2 -2,-2z" />
-</vector>
+<resources>
+    <attr name="daxLogoTextColor" format="color" />
+    <attr name="toolbarIconColor" format="color" />
+    <attr name="toolbarTextColor" format="color" />
+    <attr name="omnibarEditingBackgroundColor" format="color" />
+    <attr name="omnibarTextColor" format="color" />
+    <attr name="omnibarHintColor" format="color" />
+    <attr name="autoCompleteTextColor" format="color" />
+</resources>
