--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,35 +1,83 @@
+<!--
+  ~ Copyright (c) 2018 DuckDuckGo
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/windowBackground</item>
+    <!-- Activity Themes -->
+    <style name="AppTheme" parent="Theme.AppCompat">
+        <item name="android:windowBackground">?attr/colorPrimaryDark</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="bottomSheetDialogTheme">@style/BottomSheetDialog</item>
         <item name="android:windowActivityTransitions">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.BaseDark">
+        <item name="colorPrimary">@color/darkPrimary</item>
+        <item name="colorPrimaryDark">@color/darkPrimaryDark</item>
+        <item name="colorAccent">@color/darkAccent</item>
+        <item name="daxLogoTextColor">@color/white</item>
+        <item name="toolbarIconColor">@color/grayish</item>
+        <item name="toolbarTextColor">@color/grayish</item>
+        <item name="omnibarEditingBackgroundColor">@color/midGray</item>
+        <item name="omnibarTextColor">@color/white</item>
+        <item name="omnibarHintColor">@color/grayishTwo</item>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+        <item name="autoCompleteTextColor">@color/white</item>
 
-    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="colorControlNormal">@color/grayish</item>
     </style>
 
-    <style name="SwitchTheme" parent="Widget.AppCompat.CompoundButton.Switch">
-        <item name="colorControlActivated">@android:color/white</item>
+    <style name="AppTheme.BaseLight">
+        <item name="colorPrimary">@color/lightThemePrimary</item>
+        <item name="colorPrimaryDark">@color/lightThemePrimaryDark</item>
+        <item name="colorAccent">@color/lightThemeAccent</item>
+
+        <item name="daxLogoTextColor">@color/greyishBrownTwo</item>
+        <item name="toolbarIconColor">@color/grayishBrown</item>
+        <item name="toolbarTextColor">@color/grayishBrown</item>
+
+        <item name="omnibarEditingBackgroundColor">@color/whiteFour</item>
+        <item name="omnibarTextColor">@color/grayishBrown</item>
+        <item name="omnibarHintColor">@color/warmGray</item>
+
+        <item name="autoCompleteTextColor">@color/grayishBrown</item>
+
     </style>
 
-    <style name="BrowserTheme" parent="AppTheme">
-        <item name="android:actionButtonStyle">@style/BrowserActionButtonStyle</item>
+    <style name="AppTheme.Dark" parent="AppTheme.BaseDark" />
+
+    <style name="AppTheme.Light" parent="AppTheme.BaseLight">
+        <!-- The status bar must always be dark pre API 23 as the text
+             is light and cannot be changed
+        -->
+        <item name="android:statusBarColor">@color/almostBlack</item>
+    </style>
+
+    <style name="AppTheme.Dark.Transparent">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+    </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">?attr/colorPrimaryDark</item>
     </style>
 
     <style name="ModalCardTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/darkPrimary</item>
+        <item name="colorPrimaryDark">@color/darkPrimaryDark</item>
         <item name="colorAccent">@color/midGreen</item>
         <item name="android:windowBackground">@color/translucentDark</item>
         <item name="android:windowNoTitle">true</item>
@@ -38,10 +86,17 @@
         <item name="android:windowAnimationStyle">@android:style/Animation</item>
     </style>
 
-    <style name="BrowserActionButtonStyle" parent="@android:style/Widget.Holo.Light.ActionButton">
-        <item name="android:minWidth">1dp</item>
-        <item name="android:paddingStart">8dp</item>
-        <item name="android:paddingEnd">8dp</item>
+    <style name="AppTheme.Dark.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.Dark.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="colorControlNormal">?attr/toolbarIconColor</item>
+        <item name="android:textColorPrimary">?attr/toolbarTextColor</item>
+    </style>
+
+    <style name="SwitchTheme" parent="Widget.AppCompat.CompoundButton.Switch">
+        <item name="colorControlActivated">@android:color/white</item>
     </style>
 
     <style name="BottomSheetDialog" parent="Theme.Design.BottomSheetDialog">
@@ -55,7 +110,7 @@
     <style name="DashboardHeader">
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:letterSpacing">0.14</item>
-        <item name="android:textColor">@color/warmGray</item>
+        <item name="android:textColor">@color/grayishTwo</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -113,7 +168,7 @@
         <item name="android:layout_marginEnd">20dp</item>
         <item name="android:layout_marginStart">20dp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textColor">@color/warmGray</item>
+        <item name="android:textColor">@color/grayishTwo</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textAllCaps">true</item>
@@ -148,7 +203,7 @@
         <item name="android:paddingTop">-4dp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:lineSpacingExtra">4sp</item>
-        <item name="android:textColor">@color/warmGray</item>
+        <item name="android:textColor">@color/grayishTwo</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">normal</item>
     </style>
@@ -201,12 +256,6 @@
         <item name="android:textAllCaps">false</item>
         <item name="layout_constraintBottom_toBottomOf">parent</item>
         <item name="android:stateListAnimator">@null</item>
-
-    </style>
-
-    <style name="AppTheme.TransparentTheme">
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 
     <style name="OnboardingButtonProtectData" parent="OnboardingButtonStyle">
@@ -252,10 +301,6 @@
     <style name="OnboardingTextSubtitle.Subtitle2">
         <item name="android:paddingTop">16dp</item>
         <item name="android:lineSpacingExtra">6sp</item>
-    </style>
-
-    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@color/windowBackground</item>
     </style>
 
 </resources>
