--- a/app/src/main/res/layout/item_tab.xml
+++ b/app/src/main/res/layout/item_tab.xml
@@ -80,7 +80,7 @@
         android:layout_marginStart="12dp"
         android:fontFamily="sans-serif-medium"
         android:lines="1"
-        android:textColor="@color/midnight"
+        android:textColor="?attr/tabTitleTextColor"
         android:textIsSelectable="false"
         android:textSize="16sp"
         android:textStyle="normal"
@@ -97,7 +97,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="sans-serif"
         android:lines="1"
-        android:textColor="@color/coolGray"
+        android:textColor="?attr/tabSubtitleTextColor"
         android:textIsSelectable="false"
         android:textSize="12sp"
         android:textStyle="normal"
