--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -15,11 +15,23 @@
   -->
 
 <resources>
+
     <attr name="daxLogoTextColor" format="color" />
+    <attr name="normalTextColor" format="color" />
     <attr name="toolbarIconColor" format="color" />
     <attr name="toolbarTextColor" format="color" />
     <attr name="omnibarEditingBackgroundColor" format="color" />
     <attr name="omnibarTextColor" format="color" />
     <attr name="omnibarHintColor" format="color" />
     <attr name="autoCompleteTextColor" format="color" />
+    <attr name="tabsBackgroundColor" format="color" />
+    <attr name="tabTitleTextColor" format="color" />
+    <attr name="tabSubtitleTextColor" format="color" />
+    <attr name="bookmarkIconColor" format="color" />
+    <attr name="bookmarkTitleTextColor" format="color" />
+    <attr name="bookmarkSubtitleTextColor" format="color" />
+    <attr name="settingsSectionTextColor" format="color" />
+    <attr name="settingsItemTextColor" format="color" />
+    <attr name="settingsMinorTextColor" format="color" />
+
 </resources>
