--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,6 +50,7 @@
     <color name="warmerGray">#777777</color>
     <color name="paleBrownishGray">#b0b0b0</color>
     <color name="brownishGray">#5c5c5c</color>
+    <color name="brownishGrayTwo">#666666</color>
     <color name="coolGray">#969799</color>
     <color name="subtleGray">#f0f0f0</color>
     <color name="subtleGrayTwo">#d8d8d8</color>
