--- a/app/src/main/res/layout/content_about_duck_duck_go.xml
+++ b/app/src/main/res/layout/content_about_duck_duck_go.xml
@@ -54,7 +54,7 @@
             android:lineSpacingExtra="6sp"
             android:text="@string/aboutHeading"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="?attr/normalTextColor"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -66,7 +66,7 @@
             android:lineSpacingExtra="6sp"
             android:text="@string/aboutDescription"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="?attr/normalTextColor"
             android:textSize="16sp"
             android:textStyle="normal"
             tools:text="Long description would go here\n\nLots and lots of words" />
