--- a/app/src/main/res/layout/content_bookmarks.xml
+++ b/app/src/main/res/layout/content_bookmarks.xml
@@ -38,7 +38,7 @@
         android:layout_marginEnd="10dp"
         android:text="@string/noBookmarks"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="?attr/bookmarkTitleTextColor"
         android:textSize="16sp" />
 
 </FrameLayout>
