--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -33,5 +33,6 @@
     <attr name="settingsSectionTextColor" format="color" />
     <attr name="settingsItemTextColor" format="color" />
     <attr name="settingsMinorTextColor" format="color" />
+    <attr name="settingsSwitchBackgroundColor" format="color" />
 
 </resources>
