--- a/app/src/main/res/layout/content_tab_switcher.xml
+++ b/app/src/main/res/layout/content_tab_switcher.xml
@@ -32,6 +32,8 @@
             android:id="@+id/tabsRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             tools:itemCount="3"
             tools:listitem="@layout/item_tab" />
 
@@ -47,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:text="@string/tapFireDirective"
-                android:textColor="@color/white"
+                android:textColor="?attr/tabsFireTextColor"
                 android:textSize="14sp"
                 android:textStyle="normal" />
 
@@ -58,14 +60,14 @@
                 android:layout_marginEnd="6dp"
                 android:contentDescription="@string/tapFireIconDescription"
                 android:src="@drawable/ic_fire_24dp"
-                android:tint="@color/white" />
+                android:tint="?attr/tabsFireTextColor" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:text="@string/tapFireExplanation"
-                android:textColor="@color/white"
+                android:textColor="?attr/tabsFireTextColor"
                 android:textSize="14sp"
                 android:textStyle="normal" />
 
