--- a/app/src/main/res/layout/item_tab.xml
+++ b/app/src/main/res/layout/item_tab.xml
@@ -20,9 +20,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="5dp"
     android:layout_marginEnd="10dp"
-    android:background="@drawable/tab_background">
+    android:layout_marginBottom="5dp"
+    android:background="@drawable/tab_background"
+    android:elevation="2dp">
 
     <ImageView
         android:id="@+id/tabUnread"
