Give omnibar own theme to set color control to avoid messing up tabs icon

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -120,6 +120,10 @@
         <item name="colorControlHighlight">@color/subtleGrayTwo</item>
     </style>
 
+    <style name="OmnibarToolbarTheme">
+        <item name="colorControlHighlight">@color/subtleGrayTwo</item>
+    </style>
+
     <style name="SwitchTheme" parent="Widget.AppCompat.CompoundButton.Switch">
         <item name="colorControlActivated">@android:color/white</item>
     </style>
